--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -80,6 +80,7 @@ nav li {
   color: rgb(255, 255, 255);
   line-height: 60px;
   background-color: rgb(50, 50, 50);
+  cursor: pointer;
 }
 nav li:nth-of-type(2n) {
   background-color: rgb(40, 40, 40);
