--- a/css/styles.css
+++ b/css/styles.css
@@ -36,23 +36,32 @@ nav span {
 
 
 /* Cards */
-.card {
-  background: rgb(200, 200, 200);
+.hover-card {
+  background: rgb(255, 255, 255);
   border-radius: 2px;
   display: inline-block;
   height: 300px;
   margin: 1rem;
   position: relative;
-  width: 300px;
-}
+  width: 250px;
 
-.card {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.card:hover {
+.hover-card:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card {
+  background: rgb(255, 255, 255);
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 250px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 /* Menu BG */
